--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -23,7 +23,7 @@
                <children>
                   <TextField fx:id="nameField" promptText="Name" HBox.hgrow="ALWAYS" />
                   <TextField fx:id="phoneField" promptText="Phone #" HBox.hgrow="ALWAYS" />
-                  <TextField fx:id="emailField" promptText="Email" HBox.hgrow="ALWAYS" />
+                  <TextField fx:id="emailField" onKeyPressed="#onKeyPressed" promptText="Email" HBox.hgrow="ALWAYS" />
                   <Button minWidth="-Infinity" mnemonicParsing="false" onAction="#addContact" text="Add" />
                   <Button minWidth="-Infinity" mnemonicParsing="false" onAction="#removeContact" text="Remove" />
                </children>
